--- a/css/home-style.css
+++ b/css/home-style.css
@@ -68,6 +68,25 @@ body .tittle
 	padding-left: 8px;
 }
 
+.accBtnAlign
+{
+	text-align: right;
+	padding-right: 8px;
+}
+
+.accBtn
+{
+	color: #f0ad4e;
+	background-color: rgba(0,0,0,0);
+	border-color: rgba(0,0,0,0);
+	font-size: 24px;
+}
+
+ul.dropdown-menu
+{
+	max-width: 64px;
+}
+
 .homeBTn a:hover span
 {
 	color: #f0ad40;
@@ -93,6 +112,12 @@ body .tittle
 .menuBtn
 {
 	box-shadow: 1px 1px 5px rgba(0,0,0,0.75);
+}
+
+#areaChart
+{
+	margin-top: 16px;
+	padding-bottom: 16px;
 }
 
 /* Jumbotron */
@@ -251,7 +276,7 @@ p a
 
 html#home footer .footer-website
 {
-	position: fixed;
+	position: absolute;
 }
 
 html#job footer .footer-website
