--- a/css/home-style.css
+++ b/css/home-style.css
@@ -117,6 +117,12 @@ ul.dropdown-menu
 
 /* Notifikasi ketika Submit */
 
+div#notifSubmition
+{
+	padding: 0 0 0 0;
+	margin: 0 0 0 0;
+}
+
 div.notifSubmition.notifSuccess,
 div.notifSubmition.notifFailed
 {
